--- a/web/assets/css/override.css
+++ b/web/assets/css/override.css
@@ -2,6 +2,7 @@
   font-family: "Circular Std";
   src: url(../fonts/CircularStd-Book.otf) format("opentype");
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
@@ -9,12 +10,14 @@
   src: url(../fonts/CircularStd-BookItalic.otf) format("opentype");
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Circular Std";
   src: url(../fonts/CircularStd-Bold.otf) format("opentype");
   font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
@@ -22,18 +25,21 @@
   src: url(../fonts/CircularStd-BoldItalic.otf) format("opentype");
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Circular Std";
   src: url(../fonts/CircularStd-Black.otf) format("opentype");
   font-weight: 600;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Druk";
   src: url(../fonts/Druk-Bold.otf) format("opentype");
   font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
@@ -41,6 +47,7 @@
   src: url(../fonts/Druk-BoldItalic.otf) format("opentype");
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 :root {
