fix(send-mail): split date and time format to fix encoding issues

--- a/src/View/templates/contact-email-template.html
+++ b/src/View/templates/contact-email-template.html
@@ -24,7 +24,7 @@
                 <span class="badge badge-pill badge-primary ml-2">{{locale}}</span>
             </div>
             <small class="text-secondary">
-                <time datetime="{{date}}">{{date-format}}</time>
+                <time datetime="{{date}}">{{date-format}} · {{time-format}}</time>
             </small>
             <p>{{message}}</p>
         </div>
@@ -38,7 +38,8 @@
 
         <div class="text-secondary footnote">
             <small>Heu rebut aquest correu electrònic per notificar-vos sobre els nous missatges de contacte
-                   procedents de <a href="https://rcdeescolasantcugat.com">rcdeescolasantcugat.com</a>.</small>
+                   procedents de <a href="https://rcdeescolasantcugat.com">rcdeescolasantcugat.com</a>.
+            </small>
             <br>
             <small>Si voleu deixar de rebre aquests missatges, podeu enviar un correu electrònic notificant-ho a
                 <a href="mailto:webmaster@rcdeescolasantcugat.com">webmaster@rcdeescolasantcugat.com</a>.
