--- a/src/View/templates/error-email-template.html
+++ b/src/View/templates/error-email-template.html
@@ -24,7 +24,7 @@
                 <span class="badge badge-pill badge-danger ml-2">{{locale}}</span>
             </div>
             <small class="text-secondary">
-                <time datetime="{{date}}">{{date-format}}</time>
+                <time datetime="{{date}}">{{date-format}} · {{time-format}}</time>
             </small>
             <div class="card">
                 <p>S’ha notificat l’error següent:</p>
@@ -41,7 +41,8 @@
 
         <div class="text-secondary footnote">
             <small>Heu rebut aquest correu electrònic per notificar-vos sobre els nous missatges de contacte
-                   procedents de <a href="https://rcdeescolasantcugat.com">rcdeescolasantcugat.com</a>.</small>
+                   procedents de <a href="https://rcdeescolasantcugat.com">rcdeescolasantcugat.com</a>.
+            </small>
             <br>
             <small>Si voleu deixar de rebre aquests missatges, podeu enviar un correu electrònic notificant-ho a
                 <a href="mailto:webmaster@rcdeescolasantcugat.com">webmaster@rcdeescolasantcugat.com</a>.
