--- a/web/assets/css/override.css
+++ b/web/assets/css/override.css
@@ -820,6 +820,119 @@ table.table-rounded tr td:last-child {
   border-bottom-right-radius: .25rem !important;
 }
 
+.avatar-cos-tecnic {
+  width: 8rem;
+  height: 8rem;
+}
+
+.full-height-jumbotron {
+  min-height: calc(100vh - 72px);
+  margin-bottom: 0;
+}
+
+.base-error-code {
+  opacity: 0.4;
+  color: var(--blau);
+}
+
+.base-error-background {
+  padding: 4rem 20%;
+  opacity: 0.14;
+}
+
+.main-nav-container {
+  min-height: 4rem;
+}
+
+.footer-logo {
+  height: 6rem;
+}
+
+.contact-form-container {
+  max-width: 500px;
+}
+
+.contact-error-form-container {
+  height: 32px;
+}
+
+.contact-error-form-submit-button {
+  font-size: .8rem;
+  padding: .4rem .8rem;
+}
+
+.social-fb-icon {
+  color: #3b5998;
+}
+
+.social-ig-icon {
+  color: #3f729b;
+}
+
+.social-yt-icon {
+  color: #c4302b;
+}
+
+.price-card {
+  border: dashed 1px var(--blau);
+  border-radius: .5rem;
+}
+
+.campus-la-cerdanya-2021-background {
+  background-image: url(../img/noticies/campus-cerdanya-2021.webp);
+  background-position: center;
+}
+
+.question-badge-icon {
+  font-size: smaller;
+  padding: 0.2rem 0;
+}
+
+.shadowed-text {
+  text-shadow: 0 0 2rem black;
+}
+
+.shadowed-text a {
+  font-size: inherit;
+  text-shadow: none;
+}
+
+/*
+ * Utils
+ */
+
 .filter-brightness-80 {
   filter: brightness(0.8);
+}
+
+.op-50 {
+  opacity: 0.5;
+}
+
+.op-80 {
+  opacity: 0.8;
+}
+
+.op-100 {
+  opacity: 1;
+}
+
+.z-index-10 {
+  z-index: 10;
+}
+
+.w-min-content {
+  width: min-content;
+}
+
+.w-fit-content {
+  width: fit-content;
+}
+
+.font-size-small {
+  font-size: small;
+}
+
+.font-weight-inherit {
+  font-weight: inherit;
 }
